# project-group-20

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .ruff.toml  command_resolver.py  fuzzy_command_resolver.py  main.py  models.py  pyproject.toml  readme.md  run.py  test_manual_bot.py
.github/workflows/: ci.yml
demo/: demo.tape  demo_short.tape  notes.tape  readme.md
src/address_book_bot/: command_resolvers.py  constant.py  data_loading.py  main.py  models.py  ui.py  utils.py
src/address_book_bot/commands/: commands.py  resolvers.py
src/address_book_bot/commands/handlers/: contact_handlers.py  note_handlers.py
task_1/: main.py  models.py  readme.md
tests/: helpers.py  test_models.py
tests/address_book_bot/: test_cli_basic.py  test_cli_contacts.py  test_cli_missing_values.py  test_command_suggestions.py  test_data_persistance.py  test_notes_management.py
tests/cli/: helpers.py  test_cli_basic.py  test_cli_contacts.py  test_cli_missing_values.py  test_command_suggestions.py  test_data_persistance.py
