[project]
name = "address-book-bot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["rich"]

[project.scripts]
address-book-bot = "address_book_bot.main:main"

[dependency-groups]
dev = [
    "pre-commit",
    {include-group = "lint"},
    {include-group = "test"},
]

lint = [
    "ruff",
]

test = [
  "pytest",
  "pytest-cov",
  "pytest-freezer",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["src", "tests"]
pythonpath = ["src", "tests"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:  # pragma: no cover",
]
